[tool.poetry]
name = "swap"
version = "0.1.0"
description = "Main Fortran code of SWAP hydrological model."
authors = ["Mateusz <zawadzkimat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
ford = {git = "https://github.com/SWAP-model/ford.git"}


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocs-bibtex = "^2.16.0"
bibtexparser = "^1.4.1"
mkdocs-include-markdown-plugin = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
